<resources>
    <string name="app_name">Filterss</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_add_feed_title">Choose a multifeed</string>
    <string name="dialog_add_feed_positive_button">Create New</string>
    <string name="cancel">Cancel</string>
    <string name="feed_add_error">An error occurred while adding the feed</string>
    <string name="swipe_to_save">Saved to Read it Later</string>
    <string name="unswipe_to_remove">Removed from Read it Later</string>
    <string name="removed_from_collection">Removed from collection</string>
    <string name="categories">Categories</string>
    <string name="search_feed">Search feed</string>
    <string name="multifeed">Multifeed</string>
    <string name="multifeeds">Multifeeds</string>
    <string name="collection">Collection</string>
    <string name="collections">Collections</string>
    <string name="language_en">English</string>
    <string name="language_it">Italian</string>
    <string name="name">Name</string>
    <string name="popularity">Popularity</string>
    <string name="color">Color</string>
    <string name="choose">Choose</string>
    <string name="dialog_remove_feed_title">Remove this feed?</string>
    <string name="dialog_remove_multifeed_title">Remove this multifeed?</string>
    <string name="remove">Remove</string>
    <string name="feeds">Feeds</string>
    <string name="feedback_question">How do you rate this content?</string>
    <string name="feedback_good">Good</string>
    <string name="feedback_average">Average</string>
    <string name="feedback_bad">Bad</string>
    <string name="thank_you_feedback_submit">Thank you for the feedback</string>
    <string name="dialog_remove_collection_title">Remove this collection?</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating...</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <string name="register">Register</string>
    <string name="already_member">Already a member? Login</string>
    <string name="creating_account">Creating account...</string>
    <string name="login_failed">Login failed, check your credentials or activate your account</string>
    <string name="email_not_valid">Enter a valid email address</string>
    <string name="password_not_valid">Between 4 and 20 alphanumeric characters</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="name_not_valid">At least 3 characters</string>
    <string name="name_not_empty">Collection name can not be empty</string>
    <string name="dialog_add_article_to_collection">Add article to collection</string>
    <string name="article_added_to_collection">Article added to collection</string>
    <string name="error_adding_article">Error adding the article to the collection</string>
    <string name="dialog_add_article_positive_button">Create new collection</string>
    <string name="collection_name">Collection name</string>
    <string name="registration_completed_login">Registration completed, login now with your credentials</string>
    <string name="multifeed_title">All Multifeeds</string>
    <string name="collections_title">Collections</string>
    <string name="new_multifeed">New Multifeed</string>
    <string name="multifeed_name">Multifeed Name</string>
    <string name="multifeed_saved">Multifeed saved successfully</string>
    <string name="multifeed_not_saved">Error with the creation of the multifeed</string>
    <string name="feed">Feed</string>
    <string name="saved_in">saved in</string>
    <string name="error_adding_feed">Error adding feed</string>
    <string name="loading">Loading...</string>
    <string name="updating_user_information">Synch your data...</string>
    <string name="user_information_updated">Synch completed</string>
    <string name="feed_deleted_successfully">Feed deleted successfully</string>
    <string name="multifeed_deleted_successfully">Multifeed deleted successfully</string>
    <string name="multifeed_updated_successfully">Multifeed updated successfully</string>
    <string name="feed_deletion_error">An error with the elimination of the feed occurred</string>
    <string name="multifeed_deletion_error">An error with the elimination of the multifeed occurred</string>
    <string name="multifeed_update_error">An error with the update of the multifeed occurred</string>
    <string name="open_article">Open Article</string>
    <string name="error_connection">An error occured with the connection</string>
    <string name="read_it_later">Read it later</string>
    <string name="logout">Logout</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="collection_created">Collection created successfully</string>
    <string name="collection_removed_successfully">Collection removed successfully</string>
    <string name="collection_remove_error">An error with the removing of the collection occurred</string>
    <string name="collection_updated_successfully">Collection updated successfully</string>
    <string name="collection_update_error">An error with the collection update occurred</string>
    <string name="share_article">Share Article</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="error_collection_not_found">Error, collection not found</string>
    <string name="article_removed_from_collection">Article removed from collection</string>
    <string name="no_content_yet">No content, yet! Add some content with the + button at the top-right of the screen</string>
    <string name="not_possible_remove_this_collection">It is not possible to remove this collection</string>
    <string name="updating_articles">Updating articles...</string>
    <string name="update">Update</string>
    <string name="now">Now</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="order_by">Order By</string>
    <string name="date">Date</string>
    <string name="or">Or</string>
    <string name="server_client_id" translatable="false">885542723221-a0ha33g3gq1h6280eujpc35d678th1eu.apps.googleusercontent.com</string>
    <string name="intro_title_1">Welcome!</string>
    <string name="intro_desc_1">
        Welcome to Filterss, the first smart RSS reader.
        It allows you to read the most popular articles published by your favorite feeds.
    </string>
    <string name="intro_title_2">Sort articles</string>
    <string name="intro_desc_2">
        Articles can be sorted by date or popularity,
        you and other users contribute to make articles popular.
    </string>
    <string name="intro_title_3">Multifeed and Collections</string>
    <string name="intro_desc_3">
        Organize your feeds in bins called Multifeeds,
        and save your favorite articles in Collections
    </string>
    <string name="intro_title_4">Read It Later</string>
    <string name="intro_desc_4">
        We have created a collection called \"Read It Later\" for you,
        swipe an article to save them in this collection.
    </string>
    <string name="intro_title_5">Discover and look for new feeds</string>
    <string name="intro_desc_5">
        Search through hundreds of feeds and add them to multifeed creating your personal news board.
        Long click on a feed to discover what it is talking about
    </string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="search">Search</string>
    <string name="add_feed">Add feed</string>
    <string name="add_new_feed">Add new feed</string>
    <string name="link">Link</string>
    <string name="dialog_create_new_feed_title">Create new feed</string>
    <string name="dialog_crete_new_feed_positive_button">Create feed</string>
    <string name="error_creating_feed">Multifeed, name and link can not be empty</string>
    <string name="article_already_saved">Article already saved</string>
    <string name="feed_already_added">Feed already added</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="activate_account_title">Activate your account</string>
    <string name="activate_account_message">We have sent you a mail to activate your account. After the confirmation you\'ll be able to login</string>
    <string name="ok">Ok</string>
    <string name="duplicate_account">An account with the same email already exists</string>
    <string name="support">Support help</string>
    <string name="describe_problem">Describe here your problem</string>
    <string name="send_email">Send email</string>
    <string name="back_again_to_exit">Please click BACK again to exit</string>
    <string name="priority">Priority</string>
    <string name="priority_explanation">Giving more priority the content of this multifeed will be displayed before the others</string>
</resources>
