<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ArticleActivity">

    <item
        android:id="@+id/itemSearchArticles"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemOrderByArticleList"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/order_by"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemAddFeed"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_feed"
        app:showAsAction="always" />
</menu>