<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#000000"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="32dp">

    <ScrollView
        android:id="@+id/login_activity_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_name_vertical" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/textView"
                style="@style/material_type_scale_subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_input_shape"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="16dp"
                android:textColorHint="#000000"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/loginMailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/login_input_shape"
                android:padding="16dp"
                android:textColorHint="#000000"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/loginPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangular_rounded_white"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/signUpTextView"
                style="@style/material_type_scale_h6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textViewTermsLogin"
                style="@style/material_type_scale_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/terms_and_conditions"
                android:textColor="#959595" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>