<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/article_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/multifeed"
        app:titleTextColor="@android:color/white" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutArticle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="4dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:background="#000000" />
            </FrameLayout>

            <ScrollView
                android:id="@+id/scrollViewArticle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:orientation="vertical"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewArticleImage"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="#000000"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewArticleTitle"
                            style="@style/material_type_scale_h5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="16dp"
                            android:text="Article Title"
                            android:textColor="#FFFFFF" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#6b6b6b"
                            android:orientation="vertical"
                            android:paddingStart="32dp"
                            android:paddingLeft="32dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="32dp"
                            android:paddingRight="32dp"
                            android:paddingBottom="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageViewArticleFeedIcon"
                                    android:layout_width="16dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginRight="8dp" />

                                <TextView
                                    android:id="@+id/textViewArticleFeedName"
                                    style="@style/material_type_scale_overline"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:gravity="bottom|left"
                                    android:singleLine="true"
                                    android:text="Sub"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/textViewArticlePubDate"
                                style="@style/material_type_scale_subtitle2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:gravity="bottom|left"
                                android:singleLine="true"
                                android:text="Pub Dateb"
                                android:textColor="#FFFFFF" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginBottom="32dp"
                            android:orientation="vertical">


                            <WebView
                                android:id="@+id/textViewArticleBody"
                                style="@style/material_type_scale_body1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textColor="#000000" />

                            <Button
                                android:id="@+id/buttonArticleUrlOpen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#000000"
                                android:text="@string/open_article"
                                android:textColor="#ffffff" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="32dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textViewFeedbackQuestion"
                                    style="@style/material_type_scale_subtitle1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/feedback_question" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="16dp"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:id="@+id/linearLayoutFeedbackGood"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/material_type_scale_subtitle2"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/feedback_good" />

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:srcCompat="@drawable/ic_thumb_up_black_24dp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/linearLayoutFeedbackAverage"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/material_type_scale_subtitle2"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/feedback_average" />

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:srcCompat="@drawable/ic_thumbs_up_down_black_24dp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/linearLayoutFeedbackBad"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <TextView
                                            style="@style/material_type_scale_subtitle2"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/feedback_bad" />

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:srcCompat="@drawable/ic_thumb_down_black_24dp" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>